fixed teaching page so that it works on smaller screens

--- a/CV/css/style.css
+++ b/CV/css/style.css
@@ -77,18 +77,10 @@
   padding:0 5px
 }
  
-.section.second{
-  margin-bottom:30px
-}
- 
-.section .container{
-  position:relative
-}
- 
 .section .container:after{
   position:absolute;
   content:url(../../resources/img/separator.png);
-  left:20px
+  left: 15%
 }
   
 .section .container h1{
@@ -106,7 +98,6 @@
   height:100px;
   border-radius:110px
 }
-
 
 .intro .wrap{margin:30px 0px}
 
@@ -128,8 +119,8 @@
 
 .work_education{
   margin: auto;
-  max-width:900px;
-  width: 50%;
+  max-width:800px;
+  width: 80%;
   display: flex;
 }
 
@@ -139,7 +130,7 @@
 /*------------------------------------------*/
 
 .work{
-  padding:0px 0px 70px 0px;
+  padding:0px 0px 0px 0px;
   flex: 1;
 }
 
@@ -264,8 +255,8 @@
 
 .technical_other{
   margin: auto;
-  max-width:1200px;
-  width: 50%;
+  max-width:800px;
+  width: 80%;
   display: flex;
 }
 
